--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -2398,7 +2398,7 @@ dl
 }
 #detailedinfo
 {
-	width: 79%;
+	width: 78%;
 	float: right;
 }
 #basicinfo h4
